scrollbar fixes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,4 +37,19 @@
   }
 }
 
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 0.5vw;
+  height: 0.5vh;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(228, 227, 227);
+  border-radius: 10px;
+}
+
 
